fix get started section spacing layout

--- a/styles/style.css
+++ b/styles/style.css
@@ -320,17 +320,12 @@ label {
 /* Small tables and large phones */
 @media screen and (min-width: 768px) and (max-width: 1024px) {
   .container {
-    padding: 0;
+    padding: 2em;
   }
 
   .section,
   .header-section {
     margin-inline: auto;
-    width: 85%;
-  }
-
-  .project-details {
-    padding: 1.875em;
   }
 }
 
@@ -611,7 +606,7 @@ label {
   }
 
   .primary-btn {
-    width: 60%;
+    width: 254px;
   }
 
   .secondary-btn {
